kubernetes/turing/immich/immich/app/cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-cross-cluster
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.cluster: raspberry
            io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.cluster: raspberry
            io.kubernetes.pod.namespace: kube-system
            k8s-app: cilium
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
